# proto-api

./: BUILD  MODULE.bazel  README.md
proto_api/: BUILD  gen_metadata_tool.cc  proto_api.bzl
tests/: BUILD  gen_metadata.es6.gold.js  gen_metadata.gold.ts  proto_api_test.bzl
